# MiMind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  roadmap.md  todo.md
.cursor/commands/: autodev.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.cursor/rules/: git-commit.mdc
.github/workflows/: ci.yml  governance.yml
.specify/memory/: constitution.md
.specify/scripts/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh
.specify/templates/: constitution-template.md  plan-template.md  tasks-template.md
backend/src/: app.py  web_app.py
backend/tests/: bootstrap.py
docker/: entrypoint.sh  nginx.conf
docs/: deployment.md  model-integration-next-step-v1.md  scale-test-design-v1.md  system-design-v1.md
docs/content/: meditation-manifestation-sources.md  professional-scales-library.md
docs/qa/: t808-expert-qa-regression.md  t809-regression-report.md
frontend/: README.md  app.js  index.html  styles.css
frontend/admin/: README.md  app.js  index.html  styles.css
frontend/user/: index.html  package-lock.json  package.json  playwright.admin.config.ts  playwright.config.ts  tsconfig.test.json  (+2 more)
scripts/: autodev-claim.sh  autodev-guard.sh  autodev-preflight.sh  autodev-worktree.sh  check_conflict_markers.py  constitution-check.sh  dev-setup.sh  init-roadmap-tasks.sh  run-api.sh  run-backend-tests.sh  run-db-migrations.sh  run-web-app.sh  setup-env.sh  spec-status.sh
specs/: README.md
(+362 files in other folders)
